# xanderPool

./: .gitignore  CMakeLists.txt  LICENSE  README-CN.md  README.md
enc_temp_folder/402d18338f5116dc895eb0e32b84124/: taskResult.h
enc_temp_folder/739f354f4ad2166380a9eccc7352222c/: worker.h
libx/: CMakeLists.txt  README.md  XanderThreadPool.cpp  XanderThreadPool.h  test.cpp
libx/pool/: CMakeLists.txt  xpool.h
libx/queue/: queue.h
libx/semaphoreGuard/: semaphoreGuard.h
libx/task/: task.h  taskResult.h
libx/worker/: CMakeLists.txt  worker.cpp  worker.h
libx/xlock/: CMakeLists.txt  xlock.cpp  xlock.h
libx/xpool/: CMakeLists.txt  xpool.cpp  xpool.h
libx/xqueue/: CMakeLists.txt  xqueue.h
libx/xsemaphore_guard/: CMakeLists.txt  XSemaphoreGuard.h
libx/xtask/: CMakeLists.txt  task.h  xtask.cpp  xtask.h
libx/xtask/task/: task.h  taskId.h  taskResult.h
libx/xtask/taskManager/: taskManager.cpp  taskManager.h
libx/xthread/: CMakeLists.txt  xthraed.cpp  xthread.h
libx/xworker/: CMakeLists.txt  xworker.cpp  xworker.h
src/: CMakeLists.txt  pool.h  queue.h  task.h  taskResult.h  tool.h  worker.h
test/: CMakeLists.txt  dev_test.cc  pool_test.cc  task_find.cc  task_performance.cc  task_submit_test.cc
xanderPool/: CMakeLists.txt  test.cpp  tool.h  xpool.h
xanderPool/pool/: xpool.h
xanderPool/queue/: CMakeLists.txt  queue.cpp  queue.h
xanderPool/semaphoreGuard/: CMakeLists.txt  semaphoreGuard.h
xanderPool/task/: CMakeLists.txt  task.h  taskResult.h
xanderPool/worker/: worker.cpp  worker.h
xanderPool/xanderPool/include/: CMakeLists.txt  Pool.h  queue.h  task.h  taskResult.h  worker.h  xpool.h
